# llmtourney

./: .gitignore  LORE.md  c4-bracket.yaml  c4-heavyweight-bracket.yaml  c4-midtier-bracket.yaml  checkers-s1.yaml  checkers-s3.yaml  checkers-s6.yaml  collab_mcp_server.py  generate_results.py  holdem-bracket.yaml  holdem-midtier-bracket.yaml  pyproject.toml  report.py  reversi-bracket.yaml  reversi-final.yaml  reversi-midtier-bracket.yaml  reversi-s1.yaml  reversi-s2.yaml  reversi-semi1.yaml  reversi-semi2.yaml  run_bullshit.py  run_holdem.py  run_holdem_9p.py  run_league.py  run_liarsdice.py  run_match.py  run_yahtzee.py  scrabble-s1.yaml  scrabble-s2.yaml  scrabble-s5.yaml  scrabble-s6.yaml  scrabble-s7.yaml  spectate.py  tictactoe-s1.yaml  tictactoe-s2.yaml  tictactoe-s7.yaml  tournament-live.yaml  tournament.yaml.example  web_spectate.py
configs/: avalon-bantam-6p.yaml  avalon-exhibition-6p.yaml  avalon-test-match.yaml  bullshit-6player-match.yaml  bullshit-9player-bantam.yaml  bullshit-flyweight-match.yaml  bullshit-midtier-match.yaml  champions-bracket.yaml  champions-test.yaml  checkers-s2.yaml  checkers-s4.yaml  checkers-s5.yaml  checkers-s7.yaml  connectfour-s1.yaml  ginrummy-hints-test.yaml  ginrummy-test-match.yaml  hearts-test-match.yaml  holdem-6player-match.yaml  holdem-9player-alltier.yaml  holdem-9player-bantam.yaml  holdem-9player-crossweight.yaml  holdem-9player-midtier.yaml  holdem-9player-nano.yaml  holdem-heavyweight-bracket.yaml  liarsdice-9player-league.yaml  liarsdice-9player.yaml  mafia-bantam-7p.yaml  mafia-crosstier-7p.yaml  (+34 more)
skill/: SKILL.md
(+139 files in other folders)
