[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmtourney"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
live = ["openai>=1.0", "anthropic>=0.40"]
dev = ["pytest>=8.0"]
mongo = ["pymongo>=4.6"]
all = ["llmtourney[live,dev,mongo]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
